<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_small" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/required_indicator"
                    android:textColor="@color/nar_maron"
                    android:padding="@dimen/padding_smallest" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/current_password"
                    android:labelFor="@+id/etCurrentPassword" />

                <EditText
                    android:id="@+id/etCurrentPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_rectangle_gray"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_smallest" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >
                
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/required_indicator"
                    android:textColor="@color/nar_maron"
                    android:padding="@dimen/padding_smallest" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/new_password"
                    android:labelFor="@+id/etNewPassword" />

                <EditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_rectangle_gray"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_smallest" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical" >
                
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/required_indicator"
                    android:textColor="@color/nar_maron"
                    android:padding="@dimen/padding_smallest" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm_new_password"
                    android:labelFor="@+id/etRepeatNewPassword" />

                <EditText
                    android:id="@+id/etRepeatNewPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_rectangle_gray"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_smallest" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center" >

                <View
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/personal_question" />

                <Spinner
                    android:id="@+id/spPersonalQuestion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@drawable/selector_spinner_background" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical" >
                
                <View
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
                
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm_new_password"
                    android:labelFor="@+id/etAnswerPersonalQuestion" />

                <EditText
                    android:id="@+id/etAnswerPersonalQuestion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_rectangle_gray"
                    android:ems="10"
                    android:inputType="textCapSentences"
                    android:padding="@dimen/padding_smallest" />
            </LinearLayout>

        </LinearLayout>
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/disabled_text"/>

        <Button
            android:id="@+id/btnConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_gravity="end"
            android:background="@drawable/selector_maron_button"
            android:textColor="@color/white"
            android:text="@string/confirm" />

    </LinearLayout>

</ScrollView>
